Added in my JSON Data and Some Images
April 26, 2013

--- a/additem.html
+++ b/additem.html
@@ -75,6 +75,7 @@ April 22, 2013
         <footer>
             <p id="thankYou"><small>Thank you for choosing Game Tracker! For all of your game catalogue needs!</small></p>
         </footer>
+        <script src="js/json.js" language="javascript" type="text/javascript"></script>
         <script src="js/main.js" language="javascript" type="text/javascript"></script>
     </body>
 </html>
