--- a/additem.html
+++ b/additem.html
@@ -25,7 +25,7 @@ April 26, 2013
         </header>
         <!-- Creating the form used for this page -->
         <div class="formContainer">
-        <form action="#" method="post" id="addGameForm">
+        <form action="#" method="post" id="addGameForm" oninput="ratingOutput.value = ratingInput.valueAsNumber">
             <fieldset>
                 <legend><strong>Add A Game</strong></legend>
            	<!-- Game Titles Text -->
@@ -56,7 +56,7 @@ April 26, 2013
                     </div>
                     <!-- A range for the rating you give to the game -->
 	                <div id="ratingError">
-                    	<p><label for="rating">Your Rating: </label><input type="range" id="rating" min="0" max="10" /></p>
+                    	<p><label for="rating">Your Rating: </label><output for="rating" id="output" name="ratingOutput">0</output><strong>/10</strong><input type="range" id="rating" name="ratingInput" min="0" max="10" value="0"/></p>
 	                </div>
                     <!-- Text box for download size of the game if applicable to the game -->
                     <p><label for="download">Download Size (If Applicable): </label><input type="text" id="download" /></p>
